trying to fix the contrast issue

--- a/port.css
+++ b/port.css
@@ -209,7 +209,16 @@ p {
     padding: 0 60px;
 }
 
-/* home aboutme containers */
+/* headline in home page */
+.intro {
+    padding: 50px;
+    box-shadow: 0 2px 5px rgba(0,0,0,.8);
+    background-color: rgba(255,255,255,.3);
+    border-radius: 20px;
+    margin-top:20px;
+}
+
+/* home, aboutme containers */
 .container {
     margin: 50px;
 }
@@ -395,6 +404,7 @@ footer {
 
     .intro {
         padding: 50px;
+
     }
 
     h2 {
